--- a/editor/css/dark.css
+++ b/editor/css/dark.css
@@ -104,7 +104,7 @@ input.Number {
     position: absolute;
     top: 32px;
 	left: 0px;
-	width: 100%;
+	right: 248px;
 	bottom: 0px;
 }
 
@@ -119,7 +119,7 @@ input.Number {
 	padding: 0px;
 	margin: 0px;
     background-image: url('../images/cute_ball_shutdown.png');
-    background-size:contain;
+    background-size:20px;
     background-repeat: no-repeat;
     background-position:right top;
 
@@ -271,9 +271,10 @@ input.Number {
   border-left: 1px solid #333; 
 }
 [type=radio]:checked ~ label {
-  background: linear-gradient(rgb(150,150,150), rgb(40,40,40));
+  background: linear-gradient(#444, #444);
   border-bottom: 0px ;
   z-index: 2;
+  color:#FFF;
 }
 [type=radio]:checked ~ label ~ .content {
   z-index: 1;
